--- a/include/swap-default.conf
+++ b/include/swap-default.conf
@@ -14,8 +14,8 @@
 # Zswap create compress cache between swap and memory to reduce IO
 # https://www.kernel.org/doc/Documentation/vm/zswap.txt
 
-zswap_enabled=1
-zswap_compressor=zstd     # lzo lz4 zstd lzo-rle lz4hc
+zswap_enabled=0
+zswap_compressor=lzo     # lzo lz4 zstd lzo-rle lz4hc
 zswap_max_pool_percent=25 # 1-99
 zswap_zpool=z3fold        # zbud z3fold (note z3fold requires kernel 4.8+)
 
@@ -26,10 +26,10 @@ zswap_zpool=z3fold        # zbud z3fold (note z3fold requires kernel 4.8+)
 # Zram compression streams count for additional information see:
 # https://www.kernel.org/doc/Documentation/blockdev/zram.txt
 
-zram_enabled=0
+zram_enabled=1
 zram_size=$(( RAM_SIZE / 4 ))    # This is 1/4 of ram size by default.
 zram_count=${NCPU}               # Device count (only for kernels < 4.8)
-zram_alg=zstd                    # See $zswap_compressor
+zram_alg=lzo                    # See $zswap_compressor
 zram_prio=32767                  # 1 - 32767
 
 ################################################################################
@@ -37,10 +37,10 @@ zram_prio=32767                  # 1 - 32767
 # Allocate swap files dynamically
 # For btrfs fallback to swapfile + loop will be used
 # ex. Min swap size 256M, Max 32*256M
-swapfc_enabled=0
+swapfc_enabled=1
 swapfc_force_use_loop=0          # Force usage of swapfile + loop
 swapfc_frequency=1               # How often to check free swap space in seconds
-swapfc_chunk_size=256M           # Size of swap chunk
+swapfc_chunk_size=512M           # Size of swap chunk
 swapfc_max_count=32              # Note: 32 is a kernel maximum
 swapfc_min_count=0               # Minimum amount of chunks to preallocate
 swapfc_free_ram_perc=35          # Add first chunk if free ram < 35%
